[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "flake8_sphinx_links"
version = "0.1.0"
description = "A Flake8 plugin to check docstrings for double backticked strings which should be links to the Python documentation."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-sphinx-links"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-sphinx-links/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-sphinx-links"
Documentation = "https://flake8-sphinx-links.readthedocs.io/en/latest"

[project.entry-points."flake8.extension"]
SXL = "flake8_sphinx_links:Plugin"
