[metadata]
name = flake8_sphinx_links
description = A flake8 plugin which checks docstrings for double backticked strings that should be links to the Python documentation.
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords =

long_description = file: README.rst
long_description_content_type = text/x-rst
platforms =
    Windows
    macOS
    Linux
url = https://github.com/domdfcoding/flake8_sphinx_links
project_urls =
    Documentation = https://flake8_sphinx_links.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/flake8_sphinx_links/issues
    Source_Code = https://github.com/domdfcoding/flake8_sphinx_links
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed



[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:


[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[options.entry_points]
flake8.extension =
    SXL=flake8_sphinx_links:Plugin
